# MuOnArgon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  analyseRootOutput.C  muonargon.cc
include/: MAActionInitialization.hh  MACrystalHit.hh  MACrystalSD.hh  MADetectorConstruction.hh  MAEventAction.hh  MALiquidHit.hh  MALiquidSD.hh  MAPrimaryGeneratorAction.hh  MARunAction.hh  MAStackingAction.hh  MATrackingAction.hh  MATrajectory.hh
src/: MAActionInitialization.cc  MACrystalHit.cc  MACrystalSD.cc  MADetectorConstruction.cc  MAEventAction.cc  MALiquidHit.cc  MALiquidSD.cc  MAPrimaryGeneratorAction.cc  MARunAction.cc  MAStackingAction.cc  MATrackingAction.cc  MATrajectory.cc
test/: CMakeLists.txt  test-store-trajectory.mac  test0.mac
